<resources>
    <string name="app_name">CMMS</string>
    <string name="value">-</string>
    <string name="simpan">Simpan</string>
    <string name="keterangan">Keterangan</string>
    <string name="engginer">Engineer</string>
    <string name="shift">Shift</string>
    <string name="no_mesin">No Mesin</string>
    <string name="titikdua">\t\t:\t\t</string>
    <string name="site">Site</string>
    <string name="tanggal">Tanggal</string>
    <string name="jam">Jam</string>
    <string name="masalah">Masalah</string>
    <string name="perbaikan">Perbaikan</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="barang">Barang</string>
    <string name="satuan">Satuan</string>
    <string name="kode">Kode</string>
    <string name="qty">Qty</string>
    <string name="strip">\t\t-\t\t</string>
    <string name="hapus">Hapus</string>
    <string name="status">Status</string>
    <string name="jumlah_masalah">Jumlah Masalah</string>
    <string name="jumlah_selesai">Jumlah Terselesaikan</string>

    <string name="buka">Open</string>
    <string name="tutup">Close</string>
    <string name="tgl_progres">Tgl Progres</string>
    <string name="progres">Progres</string>
    <string name="tgl_selesai">Tgl Selesai</string>
    <string name="jadwal_penggantian">Jadwal Penggantian</string>
    <string name="nama_komponen">Nama Komponen</string>
    <string name="jumlah_komponen">Jumlah Komponen</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>

</resources>
