<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tambah.i_Mesin">
    <LinearLayout
        android:id="@+id/l1"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:text="@string/site"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/titikdua"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvSite"
                    android:text="@string/value"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>
        <EditText
            android:fontFamily="@font/roboto_mono_medium"
            android:id="@+id/etNoMesin"
            android:hint="@string/no_mesin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:fontFamily="@font/roboto_mono_medium"
            android:id="@+id/etKeterangan"
            android:hint="@string/keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="25dp"
            android:id="@+id/btnSimpan"
            android:layout_below="@id/l1"
            android:text="@string/simpan"
            android:background="@drawable/defaultbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>