<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tambah.i_Checkout">
    <LinearLayout
        android:id="@+id/l1"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:text="@string/kode"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/titikdua"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvKode"
                    android:text="@string/value"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/barang"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/titikdua"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvBarang"
                    android:text="@string/value"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/satuan"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/titikdua"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvSatuan"
                    android:text="@string/value"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/masalah"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/titikdua"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvMasalah"
                    android:text="@string/value"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:fontFamily="@font/roboto_mono_medium"
                android:id="@+id/etQty"
                android:hint="@string/qty"
                android:layout_width="105dp"
                android:inputType="number"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:id="@+id/etTanggal"
                android:hint="@string/tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <EditText
            android:fontFamily="@font/roboto_mono_medium"
            android:id="@+id/etKeterangan"
            android:hint="@string/keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="25dp"
            android:id="@+id/btnSimpan"
            android:layout_below="@id/l1"
            android:text="@string/simpan"
            android:background="@drawable/defaultbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>