<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail.d_Komponen">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:text="@string/no_mesin"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/titikdua"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvNoMesin"
                android:text="@string/value"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/site"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/titikdua"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvSite"
                android:text="@string/value"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/nama_komponen"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/titikdua"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvNamaKomponen"
                android:text="@string/value"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/jumlah_komponen"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/titikdua"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvJumlahKomponen"
                android:text="@string/value"
                android:fontFamily="@font/roboto_mono_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/btnHapus"
        android:layout_below="@id/l1"
        android:textStyle="bold"
        android:text="@string/hapus"
        android:textColor="@color/space_white"
        android:backgroundTint="@color/red"
        android:background="@drawable/defaultbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>