<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".List.L_Barang">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titikdua"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:id="@+id/tvKode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                app:fontFamily="@font/roboto_mono_medium" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barang"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titikdua"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:id="@+id/tvBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                app:fontFamily="@font/roboto_mono_medium" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satuan"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titikdua"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:id="@+id/tvSatuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                app:fontFamily="@font/roboto_mono_medium" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keterangan"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titikdua"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:id="@+id/tvKeterangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                app:fontFamily="@font/roboto_mono_medium" />
        </TableRow>
    </TableLayout>
</LinearLayout>