<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="5dp"
    android:layout_gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titikdua"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:id="@+id/tvKode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                app:fontFamily="@font/roboto_mono_medium" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barang"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titikdua"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:id="@+id/tvBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                app:fontFamily="@font/roboto_mono_medium" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titikdua"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:id="@+id/tvQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                app:fontFamily="@font/roboto_mono_medium" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satuan"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titikdua"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:id="@+id/tvSatuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                app:fontFamily="@font/roboto_mono_medium" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keterangan"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titikdua"
                app:fontFamily="@font/roboto_mono_medium" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvKet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value"
                    app:fontFamily="@font/roboto_mono_medium" />
            </LinearLayout>
        </TableRow>
        <TableRow
            android:id="@+id/trHapus"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hapus"
                app:fontFamily="@font/roboto_mono_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titikdua"
                app:fontFamily="@font/roboto_mono_medium" />
            <ImageButton
                android:id="@+id/btnHapus"
                android:backgroundTint="@color/badge_background_color"
                android:src="@drawable/ic_delete"
                android:layout_width="125dp"
                android:layout_height="35dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>